--- a/Budget.Web/appsettings.json
+++ b/Budget.Web/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Budget.db;",
-    "ApplicationConnection": "Data Source=BudgetData.db;"
+    "DefaultConnection": "Data Source=Budget.db;"    
   },
   "Logging": {
     "LogLevel": {
